--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
     "@angular/material": "^15.2.9",
+    "@angular/material-moment-adapter": "^17.0.4",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
+    "moment": "^2.30.1",
     "ngx-filesaver": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
