--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
