--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@coreui/angular": "^4.7.16",
     "@schematics/angular": "^17.2.3",
     "angular-dual-listbox": "^7.0.0",
     "bootstrap": "^5.3.2",
