--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",  
               "src/styles.scss"
             ],
             "scripts": []
@@ -86,6 +87,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css", 
               "src/styles.scss"
             ],
             "scripts": []
