--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@schematics/angular": "^17.2.3",
     "angular-dual-listbox": "^7.0.0",
+    "angular-gauge": "^5.0.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
     "ngx-filesaver": "^16.0.0",
+    "ngx-gauge": "^9.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
