--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "angular-dual-listbox": "^7.0.0",
     "angular-gauge": "^5.0.0",
     "bootstrap": "^5.3.2",
-    "chart.js": "^4.4.0",
+    "chart.js": "^4.4.3",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
+    "ng2-charts": "^6.0.1",
     "ngx-filesaver": "^16.0.0",
     "ngx-gauge": "^9.0.0",
     "rxjs": "~7.8.0",
