--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "core-js": "^3.37.1",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
     "ng2-charts": "^6.0.1",
