--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "target": "ES2022",
     "module": "esnext",
     "useDefineForClassFields": false,
-    "lib": ["dom", "es2015","ES2016",]
+    "lib": ["dom", "es2015","ES2016", "es2017"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
