--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.37.1",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "moment": "^2.30.1",
     "ng2-charts": "^6.0.1",
     "ngx-filesaver": "^16.0.0",
