--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.37.1",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "moment": "^2.30.1",
