--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "lottie-web": "^5.12.2",
     "moment": "^2.30.1",
     "ng2-charts": "^6.0.1",
     "ngx-filesaver": "^16.0.0",
     "ngx-gauge": "^9.0.0",
+    "ngx-lottie": "^7.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
