--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "core-js": "^3.37.1",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "highcharts": "^12.4.0",
+    "highcharts-angular": "^5.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
